Task 6, Read and Assert Data from Excel